Bug 49659 - rtf header, tables, pagenumber are wrong
Summary: rtf header, tables, pagenumber are wrong
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.2 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta2 tar...
Keywords: filter:rtf, regression
: 37063 48031 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-05-08 15:05 UTC by z1949
Modified: 2015-12-17 12:06 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
an rtf doc for tests (7.34 KB, application/rtf)
2012-05-08 15:05 UTC, z1949
Details

Note You need to log in before you can comment on or make changes to this bug.
Description z1949 2012-05-08 15:05:42 UTC
Created attachment 61254 [details]
an rtf doc for tests

In the test rtf included, the page is badly rendered:

Header is wrong
An image does not appear
Non existent tables
Page number missing

I am comparing with MS Word

LibO is under ubuntu 12.04 LTS
Comment 1 s-joyemusequna 2012-05-10 10:26:15 UTC
Works fine with LibO 3.4.5 under Windows XP / Vista 64 (and Word 2007).

Doesn't work with LibO 3.5.3 and LOdev version 3.6.0alpha0+ (Build ID: 34513fe) => REGRESSION

Changed platform from  "x86-64 (AMD64)" and "Linux(All) to "All" "All".
Comment 2 Miklos Vajna 2012-06-11 01:28:34 UTC
The page number issue is already fixed for bug 38786.

I can reproduce the remaining 3 issues (missing image in header, missing table in header, missing table in body).
Comment 3 Not Assigned 2012-06-11 03:27:59 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c5c3ce5e625a31d78a21fbbc339ee30ba99f3044

fdo#49659 fix RTF import of pictures with inner groups
Comment 4 Not Assigned 2012-06-11 03:28:23 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e08ab74b918be1473d91ed234ee7870cab137c7e

fdo#49659 handle RTF import of tables at the very end of the document
Comment 5 Miklos Vajna 2012-06-11 03:41:04 UTC
Now the only remaining issue is the missing table in the header, looks like that will be a dmapper bug, docx seems to have the same problem as well.
Comment 6 Not Assigned 2012-06-11 08:11:57 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=61ba6e49f5bbadaf1334ce71459647c3d0a3a37d

fdo#49659 dmapper: handle tables in substreams
Comment 7 Miklos Vajna 2012-06-11 08:15:39 UTC
Resolved in master, will backport later to -3-6 and -3-5.
Comment 8 Not Assigned 2012-06-11 09:02:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=26f4f5b94a7573132c456a302cdb92bc265541ab

fdo#49659 testcase
Comment 9 Not Assigned 2012-06-11 09:08:00 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3c5a75208b41239b2e840a2ea9932a9f5b872b36&g=libreoffice-3-6

fdo#49659 three RTF fixes


It will be available in LibreOffice 3.6.
Comment 10 Miklos Vajna 2012-06-18 01:38:33 UTC
*** Bug 37063 has been marked as a duplicate of this bug. ***
Comment 11 Not Assigned 2012-06-19 01:31:06 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9073da554f407c7aed8af6231313c5355cc266e0&g=libreoffice-3-5

fdo#49659 three RTF fixes


It will be available in LibreOffice 3.5.6.
Comment 12 Miklos Vajna 2012-07-17 13:37:33 UTC
*** Bug 48031 has been marked as a duplicate of this bug. ***
Comment 13 Rainer Bielefeld Retired 2012-08-03 09:15:26 UTC
We need exact and correct target information for automated lists in Wiki and LibO Web Site.
Comment 14 Robinson Tryon (qubit) 2015-12-17 12:06:36 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]