fdo#49659 fix RTF import of pictures with inner groups

One would think that with {\pict{\foo1}}, the inner group has no effect
in the outer group, but this turns out to be valid, so we should handle
it as well.

Change-Id: I64b933ad1cd5946f22d27669e9240d9e1875bde3